--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,13 +23,13 @@
   {{- partial "custom_head.html" . -}}
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6VF67JSQNJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GE32DPG30J"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6VF67JSQNJ');
+  gtag('config', 'G-GE32DPG30J');
 </script>
 
 <body>
